--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,7 +7,6 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 requests==2.23.0
 soupsieve==2.0
 urllib3==1.25.9
@@ -22,11 +21,35 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 pytz==2020.1
 requests==2.23.0
 six==1.14.0
 soupsieve==2.0
 tzlocal==2.1
 urllib3==1.25.9
+Werkzeug==1.0.1
+attrs==19.3.0
+beautifulsoup4==4.9.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.8
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+more-itertools==8.3.0
+packaging==20.4
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.7
+pytest==5.4.2
+pytz==2020.1
+requests==2.23.0
+six==1.14.0
+soupsieve==2.0
+tzlocal==2.1
+urllib3==1.25.9
+wcwidth==0.1.9
 Werkzeug==1.0.1
